--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
       <section>
         <div>
-          <h2>Om mig</h2>
+          <h2>Om mig - test</h2>
         </div>
       </section>
       <section>
