--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,37 @@
   <body class="">
     <main class="">
       <section class="">
-        <div>
-          <img class="h-400 w-400" src="fotoafmig.jpg" alt="" />
+        <div class="grid">
+          <div class="">
+            <img
+              class="h-screen w-full object-cover"
+              src="fotoafmig.jpg"
+              alt=""
+            />
+          </div>
+          <!-- <img
+            class=""
+            src="arrow_circle_down_FILL0_wght600_GRAD0_opsz48.svg"
+            alt=""
+          /> -->
+          <h1
+            class="absolute top-72 pl-4 text-6xl text-white md:top-40 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
+          >
+            Tanja
+          </h1>
+          <h1
+            class="absolute top-72 my-14 pl-4 text-6xl text-white md:top-40 md:my-28 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
+          >
+            Skjødt
+          </h1>
+          <h1
+            class="absolute top-72 my-28 pl-4 text-6xl text-white md:top-40 md:my-56 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
+          >
+            Sponholtz
+          </h1>
         </div>
       </section>
-      <section class="">
-        <img src="arrow_circle_down_FILL0_wght600_GRAD0_opsz48.svg" alt="" />
-      </section>
+      <section class=""></section>
 
       <section>
         <div>
