--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
-  <body class="">
-    <main class="">
-      <section class="">
+  <body>
+    <header>
+      <div>
+        <nav>
+          <ul class="flex place-content-end justify-evenly">
+            <li>
+              <a href="index.html#first_section">Forside</a>
+            </li>
+            <li><a href="index.html#second_section">kompetencer</a></li>
+            <li><a href="index.html#third_section">Om mig</a></li>
+            <li><a href="index.html#fourth_section">Portfolio</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="first_section">
         <div class="grid">
           <div class="">
             <img
@@ -39,19 +53,18 @@
           </h1>
         </div>
       </section>
-      <section class=""></section>
 
-      <section>
+      <section class="second_section">
+        <div>
+          <h2>kompetencer</h2>
+        </div>
+      </section>
+      <section class="third_section">
         <div>
           <h2>Om mig</h2>
         </div>
       </section>
-      <section>
-        <div>
-          <h2>Mine kompetencer</h2>
-        </div>
-      </section>
-      <section>
+      <section class="fourth_section">
         <div>
           <h2>Portfolio</h2>
         </div>
