--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
     <header>
       <div>
         <nav>
-          <ul class="flex place-content-end justify-evenly">
+          <ul
+            class="mr-9 mt-4 mb-4 flex place-content-end space-x-12 font-semibold"
+          >
             <li>
               <a href="index.html#first_section">Forside</a>
             </li>
@@ -54,14 +56,51 @@
         </div>
       </section>
 
-      <section class="second_section">
-        <div>
-          <h2>kompetencer</h2>
+      <section class="second_section mt-10">
+        <div class="">
+          <h2 class="mt-7 mb-10 text-center">kompetencer</h2>
+        </div>
+        <div class="ml-60 grid grid-cols-3">
+          <p>
+            Jeg har igennem multimediedesign uddannelsen lært at bruge
+            forskellige programmeringssprog og systemer. De fleste af de
+            hjemmesider jeg har lavet, har jeg kodet i HTML og CSS. Med tiden
+            har jeg lært at bruge JavaScript og det er kommet med ind på de
+            seneste hjemmesider. Derudover har jeg erfaring med CMS systemet
+            Wordpress.
+          </p>
+          <div class="ml-60">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>WordPress</li>
+            </ul>
+          </div>
+        </div>
+        <div class="ml-60 grid grid-cols-3 pt-10">
+          <p>
+            Gennem min uddannelse har jeg fået en del erfaring med Adobe
+            creative cloud. Jeg har mest erfaring i Photoshop, Illustrator,
+            Adobe XD og InDesign, men jeg har også benyttet både Premiere Pro og
+            Adobe Audition. Derudover har jeg lidt erfaring med Figma, dette har
+            jeg brugt til at lave prototyper.
+          </p>
+          <div class="ml-60">
+            <ul>
+              <li>Photoshop</li>
+              <li>Adobe XD</li>
+              <li>InDesign</li>
+              <li>Illustrator</li>
+              <li>Premiere Pro</li>
+              <li>Adobe Audition</li>
+            </ul>
+          </div>
         </div>
       </section>
       <section class="third_section">
         <div>
-          <h2>Om mig</h2>
+          <h2>Hvem er jeg?</h2>
         </div>
       </section>
       <section class="fourth_section">
