--- a/src/index.html
+++ b/src/index.html
@@ -98,9 +98,21 @@
           </div>
         </div>
       </section>
-      <section class="third_section">
-        <div>
-          <h2>Hvem er jeg?</h2>
+      <section class="third_section mt-10">
+        <div class="">
+          <h2 class="mt-7 mb-10 text-center">Hvem er jeg?</h2>
+        </div>
+        <div class="text-center">
+          <p>
+            Mit navn er Tanja Skjødt Sponholtz, jeg er 23 år gammel og jeg
+            studerer Multimediedesign på Københavns Erhvervsakademi. Som person
+            er jeg positiv, imødekommende og struktureret. Min største interesse
+            ligger indenfor digital markedsføring, UX research og visuel
+            kommunikation. Især UX er min helt store interesse, jeg finder det
+            enormt interessant at analysere brugernes adfærd, og finde ud af
+            hvordan man kan forbedre og skabe en løsning som har størst mulig
+            brugervenlighed.
+          </p>
         </div>
       </section>
       <section class="fourth_section">
