--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,7 @@
     <header>
       <div>
         <nav>
-          <ul
-            class="mr-9 mt-4 mb-4 flex place-content-end space-x-12 font-semibold"
-          >
+          <ul class="">
             <li>
               <a href="index.html#first_section">Forside</a>
             </li>
@@ -25,20 +23,11 @@
     </header>
     <main>
       <section class="first_section">
-        <div class="grid">
+        <div class="">
           <div class="">
-            <img
-              class="h-screen w-full object-cover"
-              src="fotoafmig.jpg"
-              alt=""
-            />
+            <img class="" src="fotoafmig.jpg" alt="" />
           </div>
-          <!-- <img
-            class=""
-            src="arrow_circle_down_FILL0_wght600_GRAD0_opsz48.svg"
-            alt=""
-          /> -->
-          <h1
+          <!-- <h1
             class="absolute top-72 pl-4 text-6xl text-white md:top-40 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
           >
             Tanja
@@ -52,15 +41,15 @@
             class="absolute top-72 my-28 pl-4 text-6xl text-white md:top-40 md:my-56 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
           >
             Sponholtz
-          </h1>
+          </h1> -->
         </div>
       </section>
 
-      <section class="second_section mt-10">
+      <section class="second_section">
         <div class="">
-          <h2 class="mt-7 mb-10 text-center">kompetencer</h2>
+          <h1 class="">kompetencer</h1>
         </div>
-        <div class="ml-60 grid grid-cols-3">
+        <div class="">
           <p>
             Jeg har igennem multimediedesign uddannelsen lært at bruge
             forskellige programmeringssprog og systemer. De fleste af de
@@ -69,7 +58,7 @@
             seneste hjemmesider. Derudover har jeg erfaring med CMS systemet
             Wordpress.
           </p>
-          <div class="ml-60">
+          <div class="">
             <ul>
               <li>HTML</li>
               <li>CSS</li>
@@ -78,7 +67,7 @@
             </ul>
           </div>
         </div>
-        <div class="ml-60 grid grid-cols-3 pt-10">
+        <div class="">
           <p>
             Gennem min uddannelse har jeg fået en del erfaring med Adobe
             creative cloud. Jeg har mest erfaring i Photoshop, Illustrator,
@@ -86,7 +75,7 @@
             Adobe Audition. Derudover har jeg lidt erfaring med Figma, dette har
             jeg brugt til at lave prototyper.
           </p>
-          <div class="ml-60">
+          <div class="">
             <ul>
               <li>Photoshop</li>
               <li>Adobe XD</li>
@@ -98,11 +87,11 @@
           </div>
         </div>
       </section>
-      <section class="third_section mt-10">
+      <section class="third_section">
         <div class="">
-          <h2 class="mt-7 mb-10 text-center">Hvem er jeg?</h2>
+          <h1 class="">Hvem er jeg?</h1>
         </div>
-        <div class="text-center">
+        <div class="">
           <p>
             Mit navn er Tanja Skjødt Sponholtz, jeg er 23 år gammel og jeg
             studerer Multimediedesign på Københavns Erhvervsakademi. Som person
@@ -117,7 +106,31 @@
       </section>
       <section class="fourth_section">
         <div>
-          <h2>Portfolio</h2>
+          <h1>Portfolio</h1>
+        </div>
+        <div>
+          <h2>Responsivt website</h2>
+          <a
+            class=""
+            href="https://tanjasponholtz.dk/kea/02_web/04_responsive/responsive_v2/"
+          >
+            <img src="responsivtweb.png" alt="" />
+          </a>
+        </div>
+        <div>
+          <h2>2. semestereksamen</h2>
+          <a
+            class=""
+            href="https://tanjasponholtz.dk/kea/10_eksamen/normetica/"
+          >
+            <img src="eksamen2semester.png" alt="" />
+          </a>
+        </div>
+        <div>
+          <h2>Webfeauture</h2>
+          <a class="" href="http://nicknadeemkaastrup.dk/kea/feature/">
+            <img src="webfeature.png" alt="" />
+          </a>
         </div>
       </section>
     </main>
