--- a/src/index.html
+++ b/src/index.html
@@ -46,10 +46,10 @@
       </section>
 
       <section class="second_section">
-        <div class="">
+        <div class="ml-5 mr-5 pt-8 pb-1">
           <h1 class="">kompetencer</h1>
         </div>
-        <div class="">
+        <div class="ml-5 mr-7">
           <p>
             Jeg har igennem multimediedesign uddannelsen lært at bruge
             forskellige programmeringssprog og systemer. De fleste af de
@@ -58,8 +58,8 @@
             seneste hjemmesider. Derudover har jeg erfaring med CMS systemet
             Wordpress.
           </p>
-          <div class="">
-            <ul>
+          <div class="pt-4 pb-4">
+            <ul class="">
               <li>HTML</li>
               <li>CSS</li>
               <li>JavaScript</li>
@@ -67,7 +67,7 @@
             </ul>
           </div>
         </div>
-        <div class="">
+        <div class="ml-5 mr-7">
           <p>
             Gennem min uddannelse har jeg fået en del erfaring med Adobe
             creative cloud. Jeg har mest erfaring i Photoshop, Illustrator,
@@ -75,7 +75,7 @@
             Adobe Audition. Derudover har jeg lidt erfaring med Figma, dette har
             jeg brugt til at lave prototyper.
           </p>
-          <div class="">
+          <div class="pt-4">
             <ul>
               <li>Photoshop</li>
               <li>Adobe XD</li>
@@ -88,10 +88,10 @@
         </div>
       </section>
       <section class="third_section">
-        <div class="">
+        <div class="ml-5 pt-4 pb-1">
           <h1 class="">Hvem er jeg?</h1>
         </div>
-        <div class="">
+        <div class="ml-5 mr-7">
           <p>
             Mit navn er Tanja Skjødt Sponholtz, jeg er 23 år gammel og jeg
             studerer Multimediedesign på Københavns Erhvervsakademi. Som person
@@ -105,10 +105,10 @@
         </div>
       </section>
       <section class="fourth_section">
-        <div>
+        <div class="ml-5 pt-4">
           <h1>Portfolio</h1>
         </div>
-        <div>
+        <div class="ml-5 mr-5 pb-5">
           <h2>Responsivt website</h2>
           <a
             class=""
@@ -117,7 +117,7 @@
             <img src="responsivtweb.png" alt="" />
           </a>
         </div>
-        <div>
+        <div class="ml-5 mr-5 pb-5">
           <h2>2. semestereksamen</h2>
           <a
             class=""
@@ -126,7 +126,7 @@
             <img src="eksamen2semester.png" alt="" />
           </a>
         </div>
-        <div>
+        <div class="ml-5 mr-5 pb-5">
           <h2>Webfeauture</h2>
           <a class="" href="http://nicknadeemkaastrup.dk/kea/feature/">
             <img src="webfeature.png" alt="" />
@@ -134,6 +134,12 @@
         </div>
       </section>
     </main>
+    <div class="bg-slate-300 pt-5">
+      <footer class="text-center">
+        <p>kontakt</p>
+        <p>LinkedIn</p>
+      </footer>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
