--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio</title>
   </head>
   <body>
     <header>
-      <div>
+      <!-- <div>
         <nav>
           <ul class="">
             <li>
@@ -19,7 +25,7 @@
             <li><a href="index.html#fourth_section">Portfolio</a></li>
           </ul>
         </nav>
-      </div>
+      </div> -->
     </header>
     <main>
       <section class="first_section">
@@ -27,27 +33,27 @@
           <div class="">
             <img class="" src="fotoafmig.jpg" alt="" />
           </div>
-          <!-- <h1
-            class="absolute top-72 pl-4 text-6xl text-white md:top-40 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
+          <h1
+            class="absolute top-10 pl-3 text-4xl text-white md:top-40 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
           >
             Tanja
           </h1>
           <h1
-            class="absolute top-72 my-14 pl-4 text-6xl text-white md:top-40 md:my-28 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
+            class="absolute top-12 mt-10 pl-3 text-4xl text-white md:top-40 md:my-28 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
           >
             Skjødt
           </h1>
           <h1
-            class="absolute top-72 my-28 pl-4 text-6xl text-white md:top-40 md:my-56 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
+            class="absolute top-12 mt-20 pl-2 text-4xl text-white md:top-40 md:my-56 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
           >
             Sponholtz
-          </h1> -->
+          </h1>
         </div>
       </section>
 
       <section class="second_section">
         <div class="ml-5 mr-5 pt-8 pb-1">
-          <h1 class="">kompetencer</h1>
+          <h1 class="text-xl font-medium">kompetencer</h1>
         </div>
         <div class="ml-5 mr-7">
           <p>
@@ -88,8 +94,8 @@
         </div>
       </section>
       <section class="third_section">
-        <div class="ml-5 pt-4 pb-1">
-          <h1 class="">Hvem er jeg?</h1>
+        <div class="ml-5 pt-9 pb-1">
+          <h1 class="text-xl font-bold">Hvem er jeg?</h1>
         </div>
         <div class="ml-5 mr-7">
           <p>
@@ -105,8 +111,8 @@
         </div>
       </section>
       <section class="fourth_section">
-        <div class="ml-5 pt-4">
-          <h1>Portfolio</h1>
+        <div class="ml-5 pt-9">
+          <h1 class="text-xl font-bold">Portfolio</h1>
         </div>
         <div class="ml-5 mr-5 pb-5">
           <h2>Responsivt website</h2>
