--- a/src/index.html
+++ b/src/index.html
@@ -12,21 +12,8 @@
     />
     <title>Portfolio</title>
   </head>
-  <body>
-    <header>
-      <!-- <div>
-        <nav>
-          <ul class="">
-            <li>
-              <a href="index.html#first_section">Forside</a>
-            </li>
-            <li><a href="index.html#second_section">kompetencer</a></li>
-            <li><a href="index.html#third_section">Om mig</a></li>
-            <li><a href="index.html#fourth_section">Portfolio</a></li>
-          </ul>
-        </nav>
-      </div> -->
-    </header>
+  <body class="">
+    <header></header>
     <main>
       <section class="first_section">
         <div class="">
@@ -65,7 +52,7 @@
             Wordpress.
           </p>
           <div class="pt-4 pb-4">
-            <ul class="">
+            <ul class="list-disc">
               <li>HTML</li>
               <li>CSS</li>
               <li>JavaScript</li>
@@ -82,7 +69,7 @@
             jeg brugt til at lave prototyper.
           </p>
           <div class="pt-4">
-            <ul>
+            <ul class="list-disc">
               <li>Photoshop</li>
               <li>Adobe XD</li>
               <li>InDesign</li>
