--- a/src/index.html
+++ b/src/index.html
@@ -12,32 +12,18 @@
     />
     <title>Portfolio</title>
   </head>
-  <body class="">
-    <header></header>
+  <body>
+    <header class="">
+      <div class="flex items-center">
+        <h1 class="text-4xl">
+          Hej, <br />
+          Mit navn er Tanja <br />
+          Velkommen til min portfolio
+        </h1>
+        <img src="fotoportfolio.jpg" alt="" />
+      </div>
+    </header>
     <main>
-      <section class="first_section">
-        <div class="">
-          <div class="">
-            <img class="" src="fotoafmig.jpg" alt="" />
-          </div>
-          <h1
-            class="absolute top-10 pl-3 text-4xl text-white md:top-40 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
-          >
-            Tanja
-          </h1>
-          <h1
-            class="absolute top-12 mt-10 pl-3 text-4xl text-white md:top-40 md:my-28 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
-          >
-            Skjødt
-          </h1>
-          <h1
-            class="absolute top-12 mt-20 pl-2 text-4xl text-white md:top-40 md:my-56 md:pl-20 md:text-8xl lg:ml-8 lg:text-9xl"
-          >
-            Sponholtz
-          </h1>
-        </div>
-      </section>
-
       <section class="second_section">
         <div class="ml-5 mr-5 pt-8 pb-1">
           <h1 class="text-xl font-medium">kompetencer</h1>
@@ -126,13 +112,39 @@
           </a>
         </div>
       </section>
+
+      <section class="section_five">
+        <div class="kontakt">
+          <h2>kontakt</h2>
+          <div class="email">
+            <h3>E-mail:</h3>
+            <a href="http://mailto:tanja.sponholtz@gmail.com"
+              >tanjas.sponholtz@gmail.com</a
+            >
+          </div>
+          <br />
+          <div class="telefon">
+            <h3>Telefon</h3>
+            <a href="tel:+4540479101">+4540479101</a>
+          </div>
+          <br />
+          <div class="LinkedIn">
+            <h3>LinkedIn:</h3>
+            <a href="http://www.linkedin.com/in/tanja-sponholtz-1b842b21a"
+              >https://www.linkedin.com/in/tanja-sponholtz-1b842b21a/</a
+            >
+          </div>
+          <br />
+          <div class="Github">
+            <h3>Github:</h3>
+            <a href="https://github.com/tanjasponholtz"
+              >github.com/tanjasponholtz</a
+            >
+          </div>
+        </div>
+      </section>
     </main>
-    <div class="bg-slate-300 pt-5">
-      <footer class="text-center">
-        <p>kontakt</p>
-        <p>LinkedIn</p>
-      </footer>
-    </div>
+    <footer></footer>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
