--- a/src/index.html
+++ b/src/index.html
@@ -13,22 +13,22 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header class="">
-      <div class="flex items-center">
-        <h1 class="text-4xl">
+    <header class="pt-8 pb-11">
+      <div class="flex flex-wrap items-center">
+        <h1 class="text-center text-4xl">
           Hej, <br />
           Mit navn er Tanja <br />
           Velkommen til min portfolio
         </h1>
-        <img src="fotoportfolio.jpg" alt="" />
+        <img class="" src="fotoportfolio.jpg" alt="" />
       </div>
     </header>
     <main>
       <section class="second_section">
-        <div class="ml-5 mr-5 pt-8 pb-1">
+        <div class="ml-7 mr-5 pt-8 pb-1">
           <h1 class="text-xl font-medium">kompetencer</h1>
         </div>
-        <div class="ml-5 mr-7">
+        <div class="ml-7 mr-7">
           <p>
             Jeg har igennem multimediedesign uddannelsen lært at bruge
             forskellige programmeringssprog og systemer. De fleste af de
@@ -37,7 +37,7 @@
             seneste hjemmesider. Derudover har jeg erfaring med CMS systemet
             Wordpress.
           </p>
-          <div class="pt-4 pb-4">
+          <div class="pt-4 pb-4 pl-4">
             <ul class="list-disc">
               <li>HTML</li>
               <li>CSS</li>
@@ -46,7 +46,7 @@
             </ul>
           </div>
         </div>
-        <div class="ml-5 mr-7">
+        <div class="ml-7 mr-7">
           <p>
             Gennem min uddannelse har jeg fået en del erfaring med Adobe
             creative cloud. Jeg har mest erfaring i Photoshop, Illustrator,
@@ -54,7 +54,7 @@
             Adobe Audition. Derudover har jeg lidt erfaring med Figma, dette har
             jeg brugt til at lave prototyper.
           </p>
-          <div class="pt-4">
+          <div class="pt-4 pl-4">
             <ul class="list-disc">
               <li>Photoshop</li>
               <li>Adobe XD</li>
@@ -67,10 +67,10 @@
         </div>
       </section>
       <section class="third_section">
-        <div class="ml-5 pt-9 pb-1">
+        <div class="ml-7 pt-9 pb-1">
           <h1 class="text-xl font-bold">Hvem er jeg?</h1>
         </div>
-        <div class="ml-5 mr-7">
+        <div class="ml-7 mr-7">
           <p>
             Mit navn er Tanja Skjødt Sponholtz, jeg er 23 år gammel og jeg
             studerer Multimediedesign på Københavns Erhvervsakademi. Som person
@@ -84,10 +84,10 @@
         </div>
       </section>
       <section class="fourth_section">
-        <div class="ml-5 pt-9">
+        <div class="ml-7 pt-9">
           <h1 class="text-xl font-bold">Portfolio</h1>
         </div>
-        <div class="ml-5 mr-5 pb-5">
+        <div class="ml-7 mr-7 pb-9">
           <h2>Responsivt website</h2>
           <a
             class=""
@@ -96,7 +96,7 @@
             <img src="responsivtweb.png" alt="" />
           </a>
         </div>
-        <div class="ml-5 mr-5 pb-5">
+        <div class="ml-7 mr-7 pb-9">
           <h2>2. semestereksamen</h2>
           <a
             class=""
@@ -105,7 +105,7 @@
             <img src="eksamen2semester.png" alt="" />
           </a>
         </div>
-        <div class="ml-5 mr-5 pb-5">
+        <div class="ml-7 mr-7 pb-9">
           <h2>Webfeauture</h2>
           <a class="" href="http://nicknadeemkaastrup.dk/kea/feature/">
             <img src="webfeature.png" alt="" />
@@ -113,7 +113,7 @@
         </div>
       </section>
 
-      <section class="section_five">
+      <section class="section_five pt-8 pl-7 pb-10">
         <div class="kontakt">
           <h2>kontakt</h2>
           <div class="email">
@@ -144,7 +144,12 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="bg-slate-200 pl-6 pb-8 pt-8 text-center">
+      <h3>Tanja Sponholtz</h3>
+      <div>
+        <p>©KEA student: Tanja Sponholtz - 2022</p>
+      </div>
+    </footer>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
