--- a/src/index.html
+++ b/src/index.html
@@ -151,28 +151,28 @@
 
       <section class="section_five pt-9 pl-7 pb-10">
         <div class="kontakt">
-          <h2>kontakt</h2>
+          <h2 class="font-semibold">kontakt</h2>
           <div class="email">
-            <h3>E-mail:</h3>
+            <h3 class="font-semibold">E-mail:</h3>
             <a href="http://mailto:tanja.sponholtz@gmail.com"
               >tanjas.sponholtz@gmail.com</a
             >
           </div>
           <br />
           <div class="telefon">
-            <h3>Telefon</h3>
+            <h3 class="font-semibold">Telefon</h3>
             <a href="tel:+4540479101">+4540479101</a>
           </div>
           <br />
           <div class="LinkedIn">
-            <h3>LinkedIn:</h3>
+            <h3 class="font-semibold">LinkedIn:</h3>
             <a href="http://www.linkedin.com/in/tanja-sponholtz-1b842b21a"
               >https://www.linkedin.com/in/tanja-sponholtz-1b842b21a/</a
             >
           </div>
           <br />
           <div class="Github">
-            <h3>Github:</h3>
+            <h3 class="font-semibold">Github:</h3>
             <a href="https://github.com/tanjasponholtz"
               >github.com/tanjasponholtz</a
             >
