--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       <section class="second_section">
         <div class="section_2 bg pb- m-5 grid-cols-2 rounded-md md:grid">
           <div class="ml-7 mr-7">
-            <div class="ml-7 mr-5 pt-5 pb-1">
+            <div class="mr-5 pt-5 pb-1">
               <h2 class="text-xl font-medium">kompetencer</h2>
             </div>
             <p>
@@ -59,7 +59,7 @@
             </div>
           </div>
 
-          <div class="ml-7 mr-7">
+          <div class="ml-7 mr-7 pt-5">
             <p>
               Gennem min uddannelse har jeg fået en del erfaring med Adobe
               creative cloud. Jeg har mest erfaring i Photoshop, Illustrator,
@@ -81,10 +81,10 @@
         </div>
       </section>
       <section class="third_section">
-        <div class="ml-7 pt-9 pb-1">
-          <h2 class="text-xl font-bold">Hvem er jeg?</h2>
+        <div class="ml-7 pt-9 pb-1 md:mx-40">
+          <h2 class="text-xl font-bold">Lidt om mig</h2>
         </div>
-        <div class="ml-7 mr-7">
+        <div class="ml-7 mr-7 md:mx-40">
           <p>
             Mit navn er Tanja Skjødt Sponholtz, jeg er 23 år gammel og jeg
             studerer Multimediedesign på Københavns Erhvervsakademi. Som person
@@ -97,7 +97,7 @@
           </p>
         </div>
       </section>
-      <div class="ml-7 pt-9">
+      <div class="ml-7 pt-24 pb-10 text-center">
         <h2 class="pb-2 text-xl font-bold">Projekter</h2>
       </div>
       <section class="fourth_section grid-cols-2 grid-rows-2 md:grid">
@@ -154,32 +154,36 @@
       </section>
 
       <section class="section_five pt-9 pl-7 pb-10">
-        <div class="kontakt">
-          <h2 class="font-semibold">kontakt</h2>
-          <div class="email">
-            <h3 class="font-semibold">E-mail:</h3>
-            <a href="http://mailto:tanja.sponholtz@gmail.com"
-              >tanjas.sponholtz@gmail.com</a
-            >
+        <h2 class="font-semibold">kontakt</h2>
+        <div class="grid-cols-2 md:grid">
+          <div>
+            <div class="email">
+              <h3 class="font-semibold">E-mail:</h3>
+              <a href="http://mailto:tanja.sponholtz@gmail.com"
+                >tanjas.sponholtz@gmail.com</a
+              >
+            </div>
+            <br />
+            <div class="telefon">
+              <h3 class="font-semibold">Telefon</h3>
+              <a href="tel:+4540479101">+4540479101</a>
+            </div>
+            <br />
           </div>
-          <br />
-          <div class="telefon">
-            <h3 class="font-semibold">Telefon</h3>
-            <a href="tel:+4540479101">+4540479101</a>
-          </div>
-          <br />
-          <div class="LinkedIn">
-            <h3 class="font-semibold">LinkedIn:</h3>
-            <a href="http://www.linkedin.com/in/tanja-sponholtz-1b842b21a"
-              >https://www.linkedin.com/in/tanja-sponholtz-1b842b21a/</a
-            >
-          </div>
-          <br />
-          <div class="Github">
-            <h3 class="font-semibold">Github:</h3>
-            <a href="https://github.com/tanjasponholtz"
-              >github.com/tanjasponholtz</a
-            >
+          <div>
+            <div class="LinkedIn">
+              <h3 class="font-semibold">LinkedIn:</h3>
+              <a href="http://www.linkedin.com/in/tanja-sponholtz-1b842b21a"
+                >https://www.linkedin.com/in/tanja-sponholtz-1b842b21a/</a
+              >
+            </div>
+            <br />
+            <div class="Github">
+              <h3 class="font-semibold">Github:</h3>
+              <a href="https://github.com/tanjasponholtz"
+                >github.com/tanjasponholtz</a
+              >
+            </div>
           </div>
         </div>
       </section>
