--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
       <section class="section_five pt-9 pl-7 pb-10">
         <h2 class="font-semibold">kontakt</h2>
         <div class="grid-cols-2 md:grid">
-          <div>
+          <div class="pt-2">
             <div class="email">
               <h3 class="font-semibold">E-mail:</h3>
               <a href="http://mailto:tanja.sponholtz@gmail.com"
@@ -170,7 +170,7 @@
             </div>
             <br />
           </div>
-          <div>
+          <div class="pt-2">
             <div class="LinkedIn">
               <h3 class="font-semibold">LinkedIn:</h3>
               <a href="http://www.linkedin.com/in/tanja-sponholtz-1b842b21a"
