--- a/src/index.html
+++ b/src/index.html
@@ -19,22 +19,22 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Tanja Sjødt Sponholtz Portfolio</title>
   </head>
-  <body class="lg:mx-40">
-    <header class="pt-8 pb-11 lg:mx-16">
+  <body class="">
+    <header class="pt-8 pb-11 lg:mx-40">
       <div class="grid-cols-2 md:grid">
         <div class="flex flex-wrap items-center">
-          <h1 class="text-center text-4xl">
+          <h1 class="text-center text-4xl md:pl-32 lg:pl-32">
             Hej, <br />
             Mit navn er Tanja <br />
             Velkommen til min portfolio
           </h1>
         </div>
         <div>
-          <img class="md:scale-150" src="fotoportfoliodone.png" alt="" />
+          <img class="profil" src="fotoportfoliodone.png" alt="" />
         </div>
       </div>
     </header>
-    <main>
+    <main class="lg:mx-40">
       <section class="second_section">
         <div class="section_2 bg pb- m-5 grid-cols-2 rounded-md md:grid">
           <div class="ml-7 mr-7">
@@ -81,10 +81,10 @@
         </div>
       </section>
       <section class="third_section">
-        <div class="ml-7 pt-9 pb-1 md:mx-40">
+        <div class="ml-7 pt-9 pb-1 md:mx-52">
           <h2 class="text-xl font-bold">Lidt om mig</h2>
         </div>
-        <div class="ml-7 mr-7 md:mx-40">
+        <div class="ml-7 mr-7 md:mx-52">
           <p>
             Mit navn er Tanja Skjødt Sponholtz, jeg er 23 år gammel og jeg
             studerer Multimediedesign på Københavns Erhvervsakademi. Som person
@@ -153,7 +153,7 @@
         </div>
       </section>
 
-      <section class="section_five pt-9 pl-7 pb-10">
+      <section class="section_five pt-9 pb-10 pl-12">
         <h2 class="font-semibold">kontakt</h2>
         <div class="grid-cols-2 md:grid">
           <div class="pt-2">
@@ -188,7 +188,7 @@
         </div>
       </section>
     </main>
-    <footer class="pl-6 pb-8 pt-8 text-center md:-mx-40">
+    <footer class="pl-6 pb-8 pt-8 text-center">
       <h2>Tanja Sponholtz</h2>
       <div>
         <p>©KEA student: Tanja Sponholtz - 2022</p>
